Remove RpcServiceInvoker.from(Class)
This method is not used anywhere and has been deprecated since version
9.0.3. Remove it and its underlying implementation.

Change-Id: I81965075c38aec0ec7fd0da5eaf4b8fe1d867a7b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>